--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -9,3 +9,7 @@ compiler:
   solc:
     remappings:
       - '@openzeppelin=OpenZeppelin/openzeppelin-contracts@4.5.0'
+
+networks:
+  polygon-test:
+    lot_coin: '0xE1Db74F56b719535abc68E29290eC2E844AC069e'
