--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -1,6 +1,6 @@
 dotenv: .env
 wallets:
-  from_key: ${PRIVATE_KEY}
+  from_key: ${PRIVATE_KEY2}
 
 dependencies:
   - OpenZeppelin/openzeppelin-contracts@4.5.0
